# email-oauth2-proxy

./: .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  ac.robinson.email-oauth2-proxy.plist  emailproxy.config  emailproxy.py  emailproxy.service.in  main.py  oauth2proxy.config  pyproject.toml  requirements-aws-secrets.txt  requirements-core.txt  requirements-gui.txt  requirements-no-gui.txt  requirements.txt  setup.py
.github/workflows/: build.yml  nuitka.yml  pyinstaller.yml  pypi.yml
external-auth-program/gotifier/: gotifier  gotifier-test  gotifier.conf
plugins/: BasePlugin.py  Echo.py  IMAPCapabilityModifier.py  IMAPCleanO365ATPLinks.py  IMAPDecodeDeflateCompression.py  IMAPDeflateCompressionRemoteEnabler.py  IMAPDisableDeflateCompression.py  IMAPFixO365SearchQuirks.py  IMAPIgnoreSentMessageUpload.py  IMAPLinkDestinationRevealer.py  IMAPMessageEditor.py  IMAPRegexContentReplacer.py  README.md  SMTPBlackHole.py  SMTPDisableO365Reactions.py  SMTPRemoveClientIdentifiers.py  SMTPSimpleMailingList.py
sysusers.d/: emailproxy.conf
