[build-system]
requires = ["setuptools>=61.0", "pyasyncore; python_version >= '3.12'", "cryptography"] # core requirements are needed for version detection, which requires importing the script
build-backend = "setuptools.build_meta"

[project]
name = "emailproxy"
authors = [
    { name = "Simon Robinson", email = "simon@robinson.ac" }
]
description = "Transparently add OAuth 2.0 support to IMAP/POP/SMTP clients that don't support this authentication method."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache License 2.0" }
requires-python = ">=3.6"
classifiers = [
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Communications :: Email",
    "Topic :: Communications :: Email :: Mail Transport Agents",
    "Topic :: Communications :: Email :: Post-Office",
    "Topic :: Communications :: Email :: Post-Office :: IMAP",
    "Topic :: Communications :: Email :: Post-Office :: POP3",
    "Development Status :: 6 - Mature",
    "License :: OSI Approved :: Apache Software License"
]
dynamic = ["version"]
dependencies = [
    # 2.2 or later required for MultiFernet support
    "cryptography>=2.2",
    # provide the previously standard library module `asyncore`, removed in Python 3.12 (https://peps.python.org/pep-0594/)
    "pyasyncore; python_version >= '3.12'",
    # macOS only: output to unified logging
    "pyoslog>=0.3.0; sys_platform == 'darwin'",
    # required only if using the --external-auth option in --no-gui mode
    "prompt_toolkit",
]

[project.optional-dependencies]
gui = [
    "pillow",  # to create the menu bar icon image from a TTF icon
    "setuptools",  # for pkg_resources (checking dependency versions)
    "timeago",  # for displaying the last authenticated activity hint
    # force pystray version with dummy GUI fix for headless deployments (https://github.com/moses-palmer/pystray/issues/118)
    "pystray>=0.19.4",

    # force pywebview 4.2.1+ to fix Windows issue with PyInstaller/pythonw (https://github.com/r0x0r/pywebview/issues/1086)
    # and a macOS pre-Mojave crash when opening browser windows (https://github.com/r0x0r/pywebview/pull/1047), plus a
    # missing macOS dependency issue introduced in 4.1 (https://github.com/r0x0r/pywebview/pull/1154) - note that we could
    # do, e.g., platform_release < '18' to allow Linux platforms more flexibility, but that seems over-the-top
    "pywebview>=4.2.1",

    # macOS: improve menu bar interaction, provide native notifications and handle system events
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
    "pyobjc-framework-SystemConfiguration; sys_platform == 'darwin'"
]

[tool.setuptools]
py-modules = ["emailproxy"] # ignore other folders in the root directory (note that some (such as "tests") *cannot* be ignored in the .tar.gz sdist without a MANIFEST.in)

[project.scripts]
emailproxy = "emailproxy:App"

[project.urls] # shown in alphabetical order on PyPI, and there is no way to put a "Homepage" link first as with the setup.py approach (but see https://github.com/pypi/warehouse/blob/main/warehouse/templates/packaging/detail.html)
"Documentation" = "https://github.com/simonrob/email-oauth2-proxy#email-oauth-20-proxy"
"Release Notes" = "https://github.com/simonrob/email-oauth2-proxy/releases"
"Report Issues" = "https://github.com/simonrob/email-oauth2-proxy/issues"
"Source Code" = "https://github.com/simonrob/email-oauth2-proxy"

[tool.setuptools.dynamic]
version = { attr = "emailproxy.__package_version__" }
